// Vitest Snapshot v1

exports[`diffPackageJson > empty package.json > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": undefined,
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "additions": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > empty package.json > package.json 1`] = `
{
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "files": [
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "exports": {
    ".": {
      "types": "./dist/index.cjs.d.ts",
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": "./css/dist/index.cjs.d.ts",
      "import": "./css/dist/index.mjs",
      "require": "./css/dist/index.cjs",
    },
    "./themes/apac": {
      "types": "./themes/apac/dist/index.cjs.d.ts",
      "import": "./themes/apac/dist/index.mjs",
      "require": "./themes/apac/dist/index.cjs",
    },
    "./package.json": "./package.json",
  },
}
`;

exports[`diffPackageJson > incorrect package.json > exports missing > diffs 1`] = `
[
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > exports missing > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
+   "exports": {
+     ".": {
+       "types": "./dist/index.cjs.d.ts",
+       "import": "./dist/index.mjs",
+       "require": "./dist/index.cjs",
+     },
+     "./css": {
+       "types": "./css/dist/index.cjs.d.ts",
+       "import": "./css/dist/index.mjs",
+       "require": "./css/dist/index.cjs",
+     },
+     "./themes/apac": {
+       "types": "./themes/apac/dist/index.cjs.d.ts",
+       "import": "./themes/apac/dist/index.mjs",
+       "require": "./themes/apac/dist/index.cjs",
+     },
+     "./package.json": "./package.json",
+   },
  }
`;

exports[`diffPackageJson > incorrect package.json > exports out of order > diffs 1`] = `
[
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > exports out of order > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
      "/css",
      "/dist",
      "/themes/apac",
    ],
    "exports": {
+     ".": {
+       "types": "./dist/index.cjs.d.ts",
+       "import": "./dist/index.mjs",
+       "require": "./dist/index.cjs",
+     },
      "./css": {
        "types": "./css/dist/index.cjs.d.ts",
        "import": "./css/dist/index.mjs",
        "require": "./css/dist/index.cjs",
      },
@@ --- --- @@
        "types": "./themes/apac/dist/index.cjs.d.ts",
        "import": "./themes/apac/dist/index.mjs",
        "require": "./themes/apac/dist/index.cjs",
      },
      "./package.json": "./package.json",
-     ".": {
-       "types": "./dist/index.cjs.d.ts",
-       "import": "./dist/index.mjs",
-       "require": "./dist/index.cjs",
-     },
    },
  }
`;

exports[`diffPackageJson > incorrect package.json > files > diffs 1`] = `
[
  {
    "additions": [],
    "key": "files",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > files > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
    "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
    "files": [
      "/css",
-     "/themes/apac",
      "/dist",
+     "/themes/apac",
    ],
    "exports": {
      ".": {
        "types": "./dist/index.cjs.d.ts",
        "import": "./dist/index.mjs",
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": "dist/index.esm.invalid",
    "key": "module",
    "to": "./dist/index.mjs",
  },
  {
    "additions": [
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > kitchen sink > package.json 1`] = `
{
  "main": "./dist/index.cjs",
  "module": "./dist/index.mjs",
  "files": [
    "/css",
    "/dist",
    "/extra",
    "/themes/apac",
  ],
  "exports": {
    ".": {
      "types": "./dist/index.cjs.d.ts",
      "import": "./dist/index.mjs",
      "require": "./dist/index.cjs",
    },
    "./css": {
      "types": "./css/dist/index.cjs.d.ts",
      "import": "./css/dist/index.mjs",
      "require": "./css/dist/index.cjs",
    },
    "./themes/apac": {
      "types": "./themes/apac/dist/index.cjs.d.ts",
      "import": "./themes/apac/dist/index.mjs",
      "require": "./themes/apac/dist/index.cjs",
    },
    "./package.json": "./package.json",
  },
}
`;

exports[`diffPackageJson > incorrect package.json > main > diffs 1`] = `
[
  {
    "from": "index.js",
    "key": "main",
    "to": "./dist/index.cjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > main > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
-   "main": "index.js",
+   "main": "./dist/index.cjs",
    "module": "./dist/index.mjs",
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
`;

exports[`diffPackageJson > incorrect package.json > module > diffs 1`] = `
[
  {
    "from": "something/else.js",
    "key": "module",
    "to": "./dist/index.mjs",
  },
]
`;

exports[`diffPackageJson > incorrect package.json > module > package.json 1`] = `
Snapshot Diff:
- Diff A
+ Diff B

@@ --- --- @@
  {
    "main": "./dist/index.cjs",
-   "module": "something/else.js",
+   "module": "./dist/index.mjs",
    "files": [
      "/css",
      "/dist",
      "/themes/apac",
    ],
`;
